[package]
name = "conflux-vcamt"
version = "0.1.0"
authors = ["ChenxingLi <lylcx2007@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algebra-core = { git = "https://github.com/scipr-lab/zexe.git", default-features = false, rev = "85cac177" }
ff-fft = { git = "https://github.com/scipr-lab/zexe.git", default-features = false, rev = "85cac177" }
algebra =  { git = "https://github.com/scipr-lab/zexe.git", default-features = false, rev = "85cac177" }
cfx-storage = { git = "https://github.com/Conflux-Chain/conflux-rust.git", tag = "v1.0.3"}
db = { git = "https://github.com/Conflux-Chain/conflux-rust.git", tag = "v1.0.3"}
lazy_static = "1.4"
rand = "0.7"
bencher = "0.1.5"

#[dev-dependencies]
#pprof = { version = "0.3", features = ["flamegraph"] }


[features]
default = [ "algebra/bls12_381", "algebra/std", "algebra-core/derive" ]