[workspace]

members = [
    "benchmarks",
    "asb-backend",
    "asb-options",
    "asb-utils",
    "asb-authdb",
    "asb-tasks",
    "asb-authdb/lvmt-db/ppot2ark",
]
default-members = ["benchmarks"]

[workspace.dependencies]
################
#  ASB modules 
################
asb-authdb = { path = "asb-authdb" }
asb-options = { path = "asb-options" }
asb-backend = { path = "asb-backend" }
asb-utils = { path = "asb-utils" }
asb-tasks = { path = "asb-tasks" }

#######################
#  Key-value Database 
#######################

# Interfaces
kvdb = "0.4"
kvdb07 = { package="kvdb",version="0.7" }

# Backend Implementations
kvdb-memorydb = "0.4.0"
libmdbx = "0.1.12"

# Utils
malloc_size_of = { git = "https://github.com/Conflux-Chain/conflux-rust.git", rev = "9de2cc9"}
malloc_size_of_derive = { git = "https://github.com/Conflux-Chain/conflux-rust.git", rev = "9de2cc9"}
parity-util-mem = "0.5.2"
stats = { path = "asb-backend/parity-stats", package = "parity-stats" }


###########################
#  Authenticated Database 
###########################

# Interface
authdb = { path = "asb-authdb/authdb-trait", package = "authdb-trait" }

# AuthDB implementations
lvmt-db = { path = "asb-authdb/lvmt-db", features = ["large_lvmt"] }
parity-journaldb = { path = "asb-authdb/parity-journaldb" }
patricia-trie-ethereum = { path = "asb-authdb/patricia-trie-ethereum" }

# Utils
parity-scale-codec = "1.3.5"
blake2-hasher = { path = "asb-authdb/blake2-hasher" }
hash-db = "0.11.0"
trie-db = "0.11.0"

###########
#  Types
###########
cfx-primitives = { package ="primitives", git = "https://github.com/Conflux-Chain/conflux-rust.git", rev = "9de2cc9", features = ["test_no_account_length_check"]}
cfx-types = { git = "https://github.com/Conflux-Chain/conflux-rust.git", rev = "9de2cc9"}
primitive-types = "0.7.3"

###########
#  Others
###########
lazy_static = "1.4.0"
tokio = "0.2.25"
