[package]
name = "amt-bench"
version = "0.1.0"
authors = ["ChenxingLi <lylcx2007@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rand = "0.7"
amt-db = {path="../amt-db"}
algebra =  { git = "https://github.com/scipr-lab/zexe.git", default-features = false, rev = "85cac177" }