[package]
name = "amt-bench"
version = "0.1.0"
authors = ["ChenxingLi <lylcx2007@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
keccak-hash = "0.5.1"
rand = "0.7"
amt-db = {path="../amt-db"}
ark-ff = { version="^0.2.0", default-features = false }