[package]
name = "amt-db"
version = "0.1.0"
authors = ["ChenxingLi <lylcx2007@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#ark-ec = { git =  "https://github.com/arkworks-rs/algebra" }
#ark-ff = { git =  "https://github.com/arkworks-rs/algebra" }
#ark-poly = { git =  "https://github.com/arkworks-rs/algebra" }
#ark-serialize = { git =  "https://github.com/arkworks-rs/algebra" }
#ark-bls12-381 = { git = "https://github.com/arkworks-rs/curves"}
algebra-core = { git = "https://github.com/scipr-lab/zexe.git", default-features = false, rev = "85cac177" }
ff-fft = { git = "https://github.com/scipr-lab/zexe.git", default-features = false, rev = "85cac177" }
algebra =  { git = "https://github.com/scipr-lab/zexe.git", default-features = false, rev = "85cac177" }
cfx-storage = { git = "https://github.com/Conflux-Chain/conflux-rust.git", rev = "3dac4ea2"}
db = { git = "https://github.com/Conflux-Chain/conflux-rust.git", rev = "3dac4ea2"}
cfx-types = { git = "https://github.com/Conflux-Chain/conflux-rust.git", rev = "3dac4ea2"}
keccak-hash = "0.5.1"
lazy_static = "1.4"
log = "0.4"
log4rs = { version = "1.0.0", features = ["background_rotation", "gzip"] }
rand = "0.7"
bencher = "0.1.5"
error-chain = { version = "0.12", default-features = false }
base64 = "0.13.0"
static_assertions = "0.1"

#[dev-dependencies]
#pprof = { version = "0.3", features = ["flamegraph"] }


[features]
default = [ "algebra/bls12_381", "algebra/std", "algebra-core/derive" ]