[package]
name = "amt-db"
version = "0.1.0"
authors = ["ChenxingLi <lylcx2007@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec = { version="^0.2.0", features = ["std"] }
ark-ff = { version="^0.2.0", features = ["std"] }
ark-poly = { version="^0.2.0", features = ["std"] }
ark-serialize = { version="^0.2.0",  features = ["std"]  }
ark-std = { version="^0.2.0" }

ark-bls12-381 = {  version = "^0.2.0", features = ["curve"]}
ark-bn254 = {  version = "^0.2.0", features = ["curve"]}

ppot2ark = { path = "../ppot2ark" }

cfx-storage = { git = "https://github.com/Conflux-Chain/conflux-rust.git", rev = "2ee2765"}
db = { git = "https://github.com/Conflux-Chain/conflux-rust.git", rev = "2ee2765"}
cfx-types = { git = "https://github.com/Conflux-Chain/conflux-rust.git", rev = "2ee2765"}
keccak-hash = "0.5.1"
lazy_static = "1.4"
log = "0.4"
log4rs = { version = "1.0.0", features = ["background_rotation", "gzip"] }
rand = "0.7"
bencher = "0.1.5"
error-chain = { version = "0.12", default-features = false }
base64 = "0.13.0"
static_assertions = "0.1"
exitcode = "1.1.2"

#[dev-dependencies]
#pprof = { version = "0.3", features = ["flamegraph"] }


[features]
#default = [ "algebra/bls12_381", "algebra/std", "algebra-core/derive",  ]
