[package]
name = "amt-db"
version = "0.0.1"
authors = ["ChenxingLi <lylcx2007@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec = { version="^0.2.0", features = ["std"] }
ark-ff = { version="^0.2.0", features = ["std"] }
ark-poly = { version="^0.2.0", features = ["std", "parallel"] }
ark-serialize = { version="^0.2.0",  features = ["std"]  }
ark-std = { version="^0.2.0" }
ark-bls12-381 = { version = "^0.2.0", features = ["curve"]}
ark-bn254 = { version = "^0.2.0", features = ["curve"] }
ppot2ark = { path = "../ppot2ark" }

ethereum-types = "0.9"
keccak-hash = "0.5.1"
log = "0.4"
log4rs = { version = "1.0.0", features = ["background_rotation", "gzip"] }
rand = "0.7"
error-chain = { version = "0.12", default-features = false }
base64 = "0.13.0"
static_assertions = "^1.0"
exitcode = "1.1.2"
global = "0.3.0"
integer-encoding = "3.0.2"
hashbrown = "0.11.2"

amt-serde-derive = { path="./amt-serde-derive" }

kvdb="0.4"
rayon=">=1.5"

kvdb-memorydb = "0.4.0"


[dev-dependencies]
unroll = "*"

[features]
medium_amt = []
large_amt = []
huge_amt = []
no_cache_pow = []

[[bench]]
name = "bench"
path = "benches/bench.rs"