[package]
name = "asb-tasks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asb-options = { workspace = true }

keccak-hash = "0.5.1"
crc64fast = "1.0.0"
rand = "0.7"
rand_pcg = "0.2"
serde = "1.0.149"
postcard = "1.0.2"