[package]
name = "asb-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pprof = { version = "0.3", features = ["flamegraph", "protobuf"] }
kvdb = { workspace = true }
asb-options = { workspace = true }
lazy_static = { workspace = true }
tokio = { workspace = true }
authdb = { workspace = true }
num-format = "0.4.0"
simple-process-stats = "0.1.0"