[package]
name = "benchmarks"
version = "0.1.0"
authors = ["Chenxing Li <ChenxingLi@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amt-db = { path = "../amt-db", features = ["large_amt"] }

cfx-primitives = { package ="primitives", git = "https://github.com/Conflux-Chain/conflux-rust.git", rev = "9de2cc9", features = ["test_no_account_length_check"]}
cfx-types = { git = "https://github.com/Conflux-Chain/conflux-rust.git", rev = "9de2cc9"}
simple-process-stats = "0.1"
futures="0.3"

kvdb = "0.4"
kvdb07 = {package="kvdb",version="0.7"}

# Uncomment the following lines in feature cfx-backend, requires rocksdb v0.3.0
#cfx-storage = { git = "https://github.com/Conflux-Chain/conflux-rust.git", rev = "9de2cc9"}
#cfx-kvdb-rocksdb = { package="kvdb-rocksdb", git = "https://github.com/Conflux-Chain/conflux-rust.git", rev = "2ee2765"}
cfx-kvdb-rocksdb = { path="./cfx-kvdb-rocksdb"}

## Uncomment the following lines in feature parity-backend, requires rocksdb v0.15.0
#kvdb-rocksdb = "0.9.1"

kvdb-memorydb = "0.4.0"
lazy_static = "1.4.0"

hash-db = "0.11.0"
parity-journaldb = {path="./parity-journaldb"}
stats =  {path="./parity-journaldb/stats"}
trie-db = "0.11.0"

parity-scale-codec="1.3.5"

primitive-types = "0.7.3"
parity-util-mem = "0.5.2"
num-format = "0.4.0"

keccak-hash = "0.5.1"
keccak-hasher = {git="https://github.com/openethereum/openethereum.git", rev="2ae2949"}
rlp = { version = "0.4.6" }

rand = "0.7"
rand_pcg = "0.2"
global = "0.3.0"
crc64fast = "1.0.0"
slab = "0.4.4"

smallvec = "1.5.1"
elastic-array = "0.10.3"

patricia-trie-ethereum = {path = "./patricia-trie-ethereum"}
#{git="https://github.com/openethereum/openethereum.git", rev="2ae2949"}

num = "0.4"
num-traits = "0.2"

structopt = { version = "0.3", default-features = false }
strum = "0.22.0"
strum_macros = "0.22.0"

pprof = { version = "0.3", features = ["flamegraph", "protobuf"] }

hashbrown = "0.11.2"

fs_extra = "1.2.0"

base64ct = "=1.1"

tokio = { version = "0.2.25"}

hex="0.4.3"

[features]
default=["cfx-backend"]
dmpt = ["cfx-backend"]
cfx-backend=[]
parity-backend=[]
light-hash = ["parity-journaldb/light-hash"]