[package]
name = "patricia-trie-ethereum"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Merkle-Patricia Trie (Ethereum Style)"
license = "GPL-3.0"

[dependencies]
trie-db = "0.11.0"
keccak-hasher = {git="https://github.com/openethereum/openethereum.git", rev="2ae2949"}
blake2-hasher = { workspace = true }
hash-db = "0.11.0"
rlp = { version = "0.4.6" }
parity-bytes = "0.1"
ethereum-types = "0.9.2"
elastic-array = "0.10"
parity-journaldb = { workspace = true }



[dev-dependencies]
memory-db = "0.11.0"
keccak-hash = "0.5.0"
