[package]
name = "cfx-kvdb-rocksdb"
version = "0.1.6-var"
authors = ["Parity Technologies <admin@parity.io>"]
repository = "https://github.com/paritytech/parity-common"
description = "kvdb implementation backed by rocksDB"
license = "GPL-3.0"
edition = "2018"

[dependencies]
fs-swap = "0.2.4"
kvdb = "0.4"
log = "0.4.8"
num_cpus = "1.10.1"
parking_lot = "0.11"
regex = "1.3.1"
malloc_size_of = { git = "https://github.com/Conflux-Chain/conflux-rust.git", rev = "9de2cc9"}
malloc_size_of_derive = { git = "https://github.com/Conflux-Chain/conflux-rust.git", rev = "9de2cc9"}

[dependencies.parity-util-mem]
version = "0.5"
default-features = false

[dev-dependencies]
cfx-types = { git = "https://github.com/Conflux-Chain/conflux-rust.git", rev = "9de2cc9"}
tempdir = "0.3.7"

[dependencies.rocksdb]
git = "https://github.com/Conflux-Chain/rust-rocksdb.git"
rev = "cac983ab886a0701c8458bce76a76f63de16e1bd"
