[package]
name = "parity-journaldb"
version = "0.2.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "A `HashDB` which can manage a short-term journal potentially containing many forks of mutually exclusive actions"
license = "GPL3"

[dependencies]
parity-bytes = "0.1"
ethereum-types = "0.9.2"
hash-db = "0.11.0"
hash-db15 = { package="hash-db", version="0.15.2", optional = true}
trie-db = "0.11.0"
keccak-hasher = {git="https://github.com/openethereum/openethereum.git", rev="2ae2949"}
keccak-hasher15 = {package="keccak-hasher", version = "0.15.3", optional = true}

kvdb = "0.4"
log = "0.4"
memory-db = { path = "./memory-db" }
parity-util-mem = "0.7.0"
parking_lot = "0.11.1"
fastmap = { path = "./fastmap" }
rlp = "0.4.6"
stats = {path="./stats"}

[dev-dependencies]
env_logger = "0.5"
keccak-hash = "0.5.0"
kvdb-memorydb = "=0.4.0"
parity-util-mem05 = { package ="parity-util-mem", version = "0.5.2"}

[features]
# Compatible of crate version
hash15 = ["hash-db15", "keccak-hasher15"]

