[package]
name = "blake2s-hasher"
version = "0.1.0"
authors = ["Chenxing Li <ChenxingLi@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plain_hasher = "0.2.3"
blake2 = "0.10.4"
ethereum-types = "0.9.2"
hash-db = "0.11.0"
